# SmartCalculator

./: Makefile  README.md  SmartCalculator.pyproject  main.py
data/: rc_resource.py  resource.qrc  resource_rc.py
data/styles/: qtquickcontrols2.conf
lib/calculation/: CMakeLists.txt  calculation.cc  calculation.h
src/: Calculation.py
view/: main.qml
view/model/: ButtonModel.qml
